--- a/styles.CSS
+++ b/styles.CSS
@@ -16,7 +16,7 @@ header {
     position: fixed;
     top: 0;
     border: 1px solid black;
-    width: 500px;
+    width: 600px;
     /* min-width: ??; */
     height: 110px;
     background-color: bisque;
@@ -24,6 +24,7 @@ header {
     grid-template-columns: auto;
     gap: 5px;
     text-align: center;
+    justify-content: center;
 }
 
 #header div {
@@ -32,6 +33,11 @@ header {
 
 #user-input {
     padding: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 45px;
+    justify-content: center;
+    text-align: center;
 }
 
 #header-info {
@@ -51,7 +57,7 @@ header {
 #content {
     width: 100%;
     height: 3000px;
-    margin-top: 220px;
+    margin-top: 120px;
     border: 1px solid black;
     background-color: red;
 }
