--- a/styles.CSS
+++ b/styles.CSS
@@ -14,10 +14,9 @@ header {
 
 #header {
     position: fixed;
-    top: 0;
+    top: 7px;
     border: 1px solid black;
     width: 600px;
-    /* min-width: ??; */
     height: 110px;
     background-color: bisque;
     display: grid;
@@ -25,6 +24,7 @@ header {
     gap: 5px;
     text-align: center;
     justify-content: center;
+    font-size: larger;
 }
 
 #header div {
@@ -44,17 +44,10 @@ header {
     margin-left: 5px;
 }
 
-#re-submit {
-    margin-left: 5px;
-    width: 20px;
-    height: 20px;
-    color: transparent;
-    position: relative;
-    top: 0px;
-    background-image: url("redo.png");
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    border: transparent;
+#redo {
+    width: 25px;
+    height: 25px;
+    display: none;
 }
 
 #header-info {
