--- a/styles.CSS
+++ b/styles.CSS
@@ -17,7 +17,7 @@ header {
     top: 7px;
     border: 1px solid black;
     width: 600px;
-    height: 110px;
+    height: 120px;
     background-color: bisque;
     display: grid;
     grid-template-columns: auto;
@@ -64,12 +64,17 @@ header {
     width: 10px;
 }
 
+main {
+    margin-top: 140px;
+    height: 100vh;
+    background-color: red;
+
+}
+
 #content {
     width: 100%;
-    height: 3000px;
-    margin-top: 120px;
+    /* height: 3000px; */
     border: 1px solid black;
-    background-color: red;
 }
 
 .grid-container {
