--- a/styles.CSS
+++ b/styles.CSS
@@ -60,6 +60,10 @@ header {
     width: 5px;
 }
 
+#headerTemp {
+    white-space: nowrap;
+}
+
 .gap-2 {
     width: 10px;
 }
@@ -107,6 +111,7 @@ main {
 .daily-image {
     grid-column-start: 1;
     grid-column-end: 3;
+    justify-self: center;
 }
 
 .daily-headers {
