--- a/styles.CSS
+++ b/styles.CSS
@@ -70,9 +70,9 @@ header {
 
 main {
     margin-top: 140px;
-    height: 100vh;
+    height: 200%;
     background-color: red;
-
+    padding-bottom: 100px;
 }
 
 #content {
@@ -136,6 +136,28 @@ main {
 #today-info {
     margin: 0 20px;
 }
+
+
+.sevenDayA {
+    text-decoration: none;
+}
+
+#seven-day-holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: pink;
+    padding: 10px;
+}
+
+.sevenDays {
+    width: 120px;
+    height: 200px;
+    background-color: forestgreen;
+}
+
+
 
 @media (max-width: 1900px) {
     #yesterday-info, #tomorrow-info {
