--- a/styles.CSS
+++ b/styles.CSS
@@ -75,6 +75,7 @@ main {
     padding-bottom: 100px;
 }
 
+
 #content {
     width: 100%;
     /* height: 3000px; */
@@ -98,7 +99,7 @@ main {
     grid-template-columns: auto auto;
     align-items: baseline;
     gap: 5px;
-
+    
     height: 1000px;
     
 }
@@ -206,6 +207,32 @@ main {
     align-items: center;
     width: 200px;
     margin: auto;
+    text-align: center;
+}
+
+#overview-date {
+    width: 100%;
+}
+
+#hourly-grid {
+    display: grid;
+    grid-template-columns: repeat(25, 1fr);
+    grid-template-rows: repeat(5, 70px);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 1px solid black;
+}
+
+#hourly-grid h4, #hourly-grid img {
+    border: 1px solid black;
+}
+
+#hourly-grid img {
+    align-self: center;
+    justify-self: center;
 }
 
 #hourly-time {
@@ -215,6 +242,9 @@ main {
     grid-column-gap: 10px;
     grid-row-gap: 0px;
     padding-left: 130px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #hourly-temp {
@@ -223,6 +253,9 @@ main {
     grid-template-rows: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 0px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #hourly-a-temp {
@@ -231,6 +264,9 @@ main {
     grid-template-rows: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 0px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #hourly-rain-chance {
@@ -239,15 +275,20 @@ main {
     grid-template-rows: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 0px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #hourly-weather-image {
     display: grid;
-    grid-template-columns: repeat(25, 1fr);
+    grid-template-columns: repeat(24, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 0px;
     padding-left: 130px;
+    border: 1px solid black;
+    margin-left: 1fr;
 }
 
 .overview-subtitle {
@@ -255,6 +296,9 @@ main {
     text-align: center;
 }
 
+#hourly-grid img {
+    width: clamp(32px, 100%, 64px);
+}
 
 
 @media (max-width: 1900px) {
